small markup fixes

--- a/firmware/GyverLamp_v1.6/lamp.html
+++ b/firmware/GyverLamp_v1.6/lamp.html
@@ -8,7 +8,7 @@
       <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
 
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />	  
-      <title>Lamp</title>
+      <title>💡</title>
       <style>
          @font-face { 
          font-family: 'Play', sans-serif;
@@ -17,11 +17,12 @@
       </style>
    </head>
    <body>
-      <h1>LAMP</h1>
+      
 		<div style="position: absolute;right: 10px;top: 10px;">
 		   <input id="js-on-off-toggle" type="checkbox" checked data-toggle="toggle" data-onstyle="success">
 		</div>
       <div class="container-fluid">
+	  <h1>Lamp 💡</h1>
       <ul class="nav nav-tabs" id="myTab" role="tablist">
          <li class="nav-item">
             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Эффекты</a>
